# advent-of-code-2025

./: .gitignore
day-1/: puzzle-1.cpp  puzzle-2.cpp
day-10/: CMakeLists.txt  puzzle-1.cpp  puzzle-2.cpp
day-2/: CMakeLists.txt  puzzle-1.cpp  puzzle-2.cpp
day-3/: CMakeLists.txt  puzzle-1.cpp  puzzle-2.cpp
day-4/: CMakeLists.txt  puzzle-1.cpp  puzzle-2.cpp
day-5/: CMakeLists.txt  puzzle-1.cpp  puzzle-2.cpp
day-6/: CMakeLists.txt  puzzle-1.cpp  puzzle-2.cpp
day-7/: CMakeLists.txt  puzzle-1.cpp  puzzle-2.cpp
day-8/: CMakeLists.txt  puzzle-1.cpp  puzzle-2.cpp
day-9/: CMakeLists.txt  puzzle-1.cpp  puzzle-2.cpp
